# trax

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  trax-config.cmake.in
.github/workflows/: release.yml
c/: CMakeLists.txt
c/src/: strmap.h  trax.c  trax.h
c/src/example/: camshift.c
client/: client.cpp  getopt_win.c  getopt_win.h  process.cpp  process.h  threads.c  threads.h  utilities.cpp  utilities.h
cmake/: FindOpenCV.cmake
docs/: Makefile  adoption.rst  api.rst  api_c.rst  api_client.rst  api_cpp.rst  api_matlab.rst  api_opencv.rst  api_python.rst  conf.py  development.rst  documentation_c.rst  documentation_cpp.rst  documentation_matlab.rst  documentation_python.rst  index.rst  protocol.rst  requirements.txt  support.rst  tutorial_client.rst  tutorial_compiling.rst  tutorial_introduction.rst  tutorial_linux.rst  tutorial_matlab.rst  tutorial_windows.rst  tutorials.rst
docs/tutorials/client/: CMakeLists.txt  client.cpp
docs/tutorials/matlab/: ncc_tracker.m
docs/tutorials/tracker/: CMakeLists.txt  ncc.cpp
include/: trax.h
lib/: base64.c  base64.h  buffer.h  message.c  message.h  region.c  region.h  strmap.c  test.c  trax.c  trax.cpp  trax.h
lib/tests/: debugging.c  test.cpp
matlab/: README.md  compile_trax.m  mwrapper.cpp  trax_dummy.m  trax_dummy_test.m  trax_parameters.m  trax_parse.m  trax_setup.m  trax_status.m  trax_wait.m  traxserver.cpp
native/: CMakeLists.txt  buffer.h  region.c  region.h  strmap.c  trax.c  trax.h
native/client/: client.cpp  overlap.cpp  overlap.h  process.cpp  threads.c  threads.h
native/trackers/: camshift.c  dummy.c
python/: setup.py  setup.py.in  simpleClientTest.cpp  trax.py  traxServerTest.py
python/trax/: __init__.py  image.py  message.py  region.py  server.py
src/: base64.c  buffer.h  debug.c  debug.h  hull.c  hull.h  message.c  message.h  region.c  region.h  trax.c  trax.h  traxpp.cpp
src/example/: camshift.c
src/tests/: CMakeLists.txt  test.c
support/client/: CMakeLists.txt  cli.cpp  client.cpp  getopt.c  player.cpp  process.cpp  process.h  tester.cpp  tester_resources.c  threads.cpp  threads.h  timer.cpp
support/client/include/trax/: client.hpp
support/client/res/: compile.m
support/matlab/: CMakeLists.txt  DESCRIPTION.in  README.md  compile_trax.m  helpers.cpp  helpers.h  traxclient.cpp  traxclient.m  traxserver.cpp  traxserver.m
support/opencv/: CMakeLists.txt  camshift.cpp  interactive.cpp  opencv.cpp
support/opencv/include/trax/: opencv.hpp
support/python/: CMakeLists.txt  MANIFEST.in  README.md  README.rst  setup.py  setup.py.in
support/python/trax/: __init__.py  _ctypes.py  client.py  image.py  internal.py  region.py  server.py  wrapper.py
support/tests/: CMakeLists.txt
support/tests/bad/: CMakeLists.txt  badmex.c  badtracker.cpp  badtracker.m  badtracker.py
support/tests/client/: CMakeLists.txt  simple_client.m
support/tests/python/: CMakeLists.txt  test_images.py
support/tests/static/: CMakeLists.txt  matlab_static.m  native_static.c  python_static.py
testing/: images.txt.in  rectangles.txt
trackers/: CMakeLists.txt  camshift.c  camshift.cpp  dummy.c  interactive.cpp  matlab_static.m  native_static.c  python_static.py  static.c
trackers/mex/: tracker_static.m
trackers/mwrapper/: tracker_ncc_initialize.m  tracker_ncc_update.m  tracker_static_initialize.m  tracker_static_update.m
