PROJECT (libtrax)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
GET_FILENAME_COMPONENT(PROJECT_ROOT . ABSOLUTE)

SET(CMAKE_MODULE_PATH ${PROJECT_ROOT}/cmake)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)

ADD_LIBRARY(trax SHARED src/trax.c src/strmap.c)

ADD_EXECUTABLE(dummy src/dummy.c)

TARGET_LINK_LIBRARIES(dummy trax m)

SET (CAMSHIFT_EXAMPLE FALSE CACHE BOOL "Build an example using OpenCV CamShift tracker")

IF (CAMSHIFT_EXAMPLE)
	FIND_PACKAGE(OpenCV REQUIRED)
	INCLUDE_DIRECTORIES(AFTER ${OpenCV_INCLUDE_DIR})
	ADD_EXECUTABLE(camshift src/camshift.c)
	TARGET_LINK_LIBRARIES(camshift ${OpenCV_LIBS} trax m)
ENDIF (CAMSHIFT_EXAMPLE)

IF (WIN32)
	INSTALL(TARGETS trax RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX})
	INSTALL(FILES src/trax.h DESTINATION include)
ENDIF (WIN32)

IF (UNIX)
	INSTALL(TARGETS trax LIBRARY DESTINATION lib)
	INSTALL(FILES src/trax.h DESTINATION include)
ENDIF (UNIX)
