CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

FIND_PROGRAM(MKOCTFILE mkoctfile)

IF (MKOCTFILE)

	ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/traxserver.mex COMMAND ${MKOCTFILE}
		-mex -I${CMAKE_SOURCE_DIR}/lib/ ${CMAKE_CURRENT_SOURCE_DIR}/traxserver.cpp
		-ltraxstatic -L${CMAKE_RUNTIME_OUTPUT_DIRECTORY} MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/traxserver.cpp
		DEPENDS traxstatic WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} COMMENT "Building Octave bindings")
	ADD_CUSTOM_TARGET(traxoctave ALL DEPENDS ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/traxserver.mex)
	CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/DESCRIPTION.in" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DESCRIPTION")

	IF (OCTAVE_INSTALL)
		INSTALL(FILES
			"${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/traxserver.mex"
			"${CMAKE_CURRENT_SOURCE_DIR}/traxserver.m"
			"${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/DESCRIPTION" DESTINATION ${OCTAVE_INSTALL}
		)
	ENDIF()

ENDIF()
