CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(AFTER ${OpenCV_INCLUDE_DIR})
ADD_DEFINITIONS(-DTRAX_BUILD_OPENCV)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
ADD_LIBRARY(trax_opencv SHARED opencv.cpp)
TARGET_LINK_LIBRARIES(trax_opencv trax ${OpenCV_LIBS})
INSTALL(FILES "include/trax/opencv.hpp" DESTINATION include/trax)

IF (WIN32 OR WIN64)
	INSTALL(TARGETS trax_opencv RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
ELSE ()
	INSTALL(TARGETS trax_opencv LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
ENDIF()

ADD_EXECUTABLE(camshift camshift.cpp)
ADD_EXECUTABLE(interactive interactive.cpp)
TARGET_LINK_LIBRARIES(camshift trax trax_opencv ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(interactive trax trax_opencv ${OpenCV_LIBS})
