CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(AFTER ${OpenCV_INCLUDE_DIR})
ADD_DEFINITIONS(-DTRAX_BUILD_OPENCV)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
ADD_LIBRARY(trax_opencv SHARED opencv.cpp)
TARGET_LINK_LIBRARIES(trax_opencv trax ${OpenCV_LIBS})
INSTALL(FILES "include/trax/opencv.hpp" DESTINATION include/trax)

SET_TARGET_PROPERTIES(trax_opencv PROPERTIES VERSION 0.0.0 SOVERSION 0)

IF (WIN32 OR WIN64)
	INSTALL(TARGETS trax_opencv EXPORT opencv DESTINATION ${CMAKE_INSTALL_BINDIR})
ELSE ()
	INSTALL(TARGETS trax_opencv EXPORT opencv DESTINATION ${CMAKE_INSTALL_LIBDIR})
ENDIF()

IF (BUILD_EXAMPLES)
	ADD_EXECUTABLE(camshift camshift.cpp)
	ADD_EXECUTABLE(interactive interactive.cpp)
	TARGET_LINK_LIBRARIES(camshift trax trax_opencv ${OpenCV_LIBS})
	TARGET_LINK_LIBRARIES(interactive trax trax_opencv ${OpenCV_LIBS})
ENDIF (BUILD_EXAMPLES)

INSTALL(EXPORT opencv DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/trax FILE trax-component-opencv.cmake)

