FIND_PACKAGE(PythonInterp REQUIRED)

SET(SOURCES_PY
  ${CMAKE_CURRENT_SOURCE_DIR}/trax/__init__.py
  ${CMAKE_CURRENT_SOURCE_DIR}/trax/image.py
  ${CMAKE_CURRENT_SOURCE_DIR}/trax/region.py
  ${CMAKE_CURRENT_SOURCE_DIR}/trax/internal.py
  ${CMAKE_CURRENT_SOURCE_DIR}/trax/server.py
  ${CMAKE_CURRENT_SOURCE_DIR}/trax/client.py)
SET(BUILD_PYTHON_DIR "${CMAKE_BINARY_DIR}/python")

#get_filename_component(TRAX_BASENAME $<TARGET_FILE:trax> NAME_WE)

#get_target_property(TRAX_BASENAME trax OUTPUT_NAME)
set(TRAX_FILENAME ${CMAKE_SHARED_LIBRARY_PREFIX}trax${CMAKE_SHARED_LIBRARY_SUFFIX})

ADD_CUSTOM_COMMAND(OUTPUT
        ${BUILD_PYTHON_DIR}/trax/${TRAX_FILENAME}
    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:trax>
        ${BUILD_PYTHON_DIR}/trax/${TRAX_FILENAME}
    DEPENDS trax
)

ADD_CUSTOM_TARGET(copy_library_python ALL
    DEPENDS ${BUILD_PYTHON_DIR}/trax/${TRAX_FILENAME}
)

ADD_CUSTOM_COMMAND(TARGET copy_library_python COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/setup.py ${BUILD_PYTHON_DIR}/)
ADD_CUSTOM_COMMAND(TARGET copy_library_python COMMAND ${CMAKE_COMMAND} -E copy_if_different ${SOURCES_PY} ${BUILD_PYTHON_DIR}/trax)
