CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

FIND_PROGRAM(OCTAVE octave)

IF(WIN32)
SET(PATHVAR "PATH")
SET(PATHLIST "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release:${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug:$ENV{PATH}")
ELSE()
SET(PATHVAR "LD_LIBRARY_PATH")
SET(PATHLIST "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
ENDIF()

ADD_SUBDIRECTORY(library)
ADD_SUBDIRECTORY(static)

IF(NOT WIN32)
# Disabling Windows tests for signals at the moment
ADD_SUBDIRECTORY(bad)
ENDIF()

ADD_TEST(NAME test_nonexisting_tracker COMMAND traxtest -d -- idonotexist WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

set_tests_properties(test_nonexisting_tracker PROPERTIES TIMEOUT 10 WILL_FAIL TRUE)

IF (BUILD_OCTAVE AND OCTAVE)
ADD_TEST(NAME test_octave_nonexisting COMMAND traxtest -d -t 3 -- ${OCTAVE} --no-window-system --no-gui --path ${CMAKE_CURRENT_SOURCE_DIR} --eval "idonotexist" WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set_tests_properties(test_octave_nonexisting PROPERTIES TIMEOUT 5 WILL_FAIL TRUE)
ENDIF()

IF (BUILD_PYTHON)
    ADD_SUBDIRECTORY(python)
ENDIF (BUILD_PYTHON)

IF (BUILD_CLIENT)
    ADD_SUBDIRECTORY(client)
ENDIF (BUILD_CLIENT)